# apps/api/openapi/schema.yml
@@ -10728,10 +10728,11 @@ components:
           type: string
           maxLength: 100
         parent:
-          type: integer
-          nullable: true
+          type: string
+          readOnly: true
       required:
       - name_uz
+      - parent
       - slug
     Tournament:
       type: object
